--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.5
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
